# ultimate-memory

./: .dockerignore  .env.example  .gitignore  .importlinter  CLA.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  RELEASING.md  TRADEMARKS.md  alembic.ini  compose.yaml  concepts.md  data.json  decisions.md  implementation_core_values.md  investigation_plan.md  l6_graph_design.md  ladybug_capabilities.md  loopy_loop_config.yaml  loopy_loop_goal.txt  loopy_loop_runbook.md  open_questions_from_author.md  pyproject.toml  questions.md  requirements_v1.md  requirements_v2.md  skills-lock.json
.agents/skills/eval-banana/: SKILL.md
.claude/skills/: eval-banana
.eval-banana/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/compose/: upgrade-gate.yaml
.github/workflows/: ci.yml  cla.yml  docs-deploy.yml  release.yml
.loopy_loop/prompting_guides/: README.md
.loopy_loop/prompting_guides/anthropic/: claude-prompting-best-practices.md  prompting-claude-fable-5.md  prompting-claude-opus-4-8.md
.loopy_loop/prompting_guides/openai/: gpt-5.6-prompting-guidance.md
.loopy_loop/workflow_sets/inner_outer_eval/: contract.yaml
.loopy_loop/workflow_sets/pm_planner_dispatcher/: contract.yaml
.team-harness/: config.toml
_claude_prompts/: appendix.md
benchmarks/: __init__.py
benchmarks/locomo/: README.md  __init__.py  __main__.py  cli.py  dataset.py  generate_manifests.py  model.py  protocol.py  runner.py
benchmarks/locomo/manifests/: development.json  publication.json  smoke.json
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_1cb1dce399b09bae___init___py.html  z_1cb1dce399b09bae_forget_py.html  z_1cb1dce399b09bae_git_py.html  z_1cb1dce399b09bae_lance_py.html  z_1cb1dce399b09bae_minio_py.html  z_1cb1dce399b09bae_mounts_py.html  z_1cb1dce399b09bae_object_store_py.html  z_1cb1dce399b09bae_projection_py.html  z_1cb1dce399b09bae_queue_py.html  z_1cb1dce399b09bae_telemetry_py.html  z_1cb1dce399b09bae_watcher_py.html  z_290d6895816b48bf__helpers_py.html  z_290d6895816b48bf_env_py.html  z_41dff4d56a7feb12___init___py.html  z_41dff4d56a7feb12_selfhost_forget_py.html  z_41dff4d56a7feb12_selfhost_operations_py.html  z_41dff4d56a7feb12_selfhost_py.html  z_437d62b563b369d3___init___py.html  z_437d62b563b369d3_adjudication_py.html  z_437d62b563b369d3_auth_py.html  z_437d62b563b369d3_blocks_py.html  z_437d62b563b369d3_chunks_py.html  z_437d62b563b369d3_claims_py.html  z_437d62b563b369d3_client_py.html  z_437d62b563b369d3_clustering_py.html  z_437d62b563b369d3_component_version_py.html  z_437d62b563b369d3_consumption_py.html  z_437d62b563b369d3_conversion_py.html  z_437d62b563b369d3_deployment_py.html  z_437d62b563b369d3_documents_py.html  z_437d62b563b369d3_envelope_py.html  z_437d62b563b369d3_evaluation_py.html  z_437d62b563b369d3_forget_py.html  z_437d62b563b369d3_git_py.html  z_437d62b563b369d3_knowledge_authored_py.html  z_437d62b563b369d3_knowledge_planner_py.html  (+313 more)
plan/analysis/: concepts.md  czech_slice_spike.md  design_review_2026_07.md  entity_registry.md  ladybug_capabilities.md  ladybug_query_semantics.md  lance_indexing_maintenance.md  locomo_benchmark_analysis.md  objections.md  p2_spike_battery.md  p3_agent_navigation.md  phase_8_benchmark_selection.md  phase_8_deep_research_prompt.md  retrieval_scenarios.md  retrieval_spike_battery.md  reuse_hit_rate_spike.md  unmerge_supersession_ripple_spike.md  workers.md
plan/analysis/claimify_research/: SYNTHESIS.md
plan/analysis/entity_typing_research/: SYNTHESIS.md  _workflow.js
plan/analysis/evidence_lifecycle/: SYNTHESIS.md  internal_analysis.md  stress_test_amendments.md
plan/analysis/fact_layer_architecture_research/: SYNTHESIS.md  internal_analysis.md  ladybug_projection_findings.md
plan/analysis/ladybug_translation_research/: SYNTHESIS.md
plan/analysis/media_handling/: BINDING_RECONCILIATION.md  SYNTHESIS.md  internal_analysis.md
plan/analysis/multimodal_research/: SYNTHESIS.md  _workflow.js  claude_analysis.md  question_brief.md
plan/analysis/nonrelational_conflict_research/: SYNTHESIS.md  internal_analysis.md
plan/analysis/qualitative_belief_research/: SYNTHESIS.md
plan/analysis/registry_research/: SYNTHESIS.md  _workflow.js
plan/analysis/value_gate_research/: SYNTHESIS.md  _workflow.js
plan/designs/: docs_site_design.md  e0_files_design.md  e1_5_value_gate_design.md  e1_chunks_design.md  e2_e3_claims_relations_design.md  e2_value_control_non_goal.md  evidence_lifecycle_design.md  fact_layer_design.md  hard_forget_design.md  k_layers_design.md  l6_graph_design.md  locomo_benchmark_design.md  media_design.md  nonrelational_facts_design.md  observations_design.md  orchestration_design.md  overall_design.md  p2_graph_design.md  packaging_distribution_design.md  postgres_schema_design.md  registries_design.md  retrieval_design.md
plan/implementation_evals/: README.md  codex_review.md  codex_review_2.md
plan/implementation_evals/eval_checks/: boundary_correctness_in_library_d60.yaml  boundary_extension_points_no_bypass_d60.yaml  boundary_library_scope_d60.yaml  boundary_no_human_control_plane_d60.yaml  boundary_provider_ports_d61.yaml  code_architecture_enforced_d62.yaml  code_config_via_pydantic_settings.yaml  code_exceptions_never_buried.yaml  code_tooling_and_migrations.yaml  delivery_artifacts_and_task_shells_d62.yaml  (+77 more)
plan/plans/: phase-0-foundations.md  phase-1-walking-skeleton.md  phase-2-truth-machinery.md  phase-3-evidence-lifecycle.md  phase-4-projections.md  phase-5-retrieval-complete.md  phase-6-plane-k.md  phase-7-scale-ops.md  phase-8-benchmarks.md  roadmap.md
plan/requirements/: requirements_v3.md
scripts/: check_release_contract.py
src/rememberstack/: __init__.py  client.py
src/tests/: test_forget_port_contract.py  test_port_inventory_and_conformance.py  test_port_model_values.py  test_queue_port_contract.py  test_smoke.py
src/ultimate_memory/: __init__.py  client.py
website/: .gitignore  README.md  mdx-components.tsx  next.config.ts  package-lock.json  package.json  tsconfig.json
website/public/: CNAME
(+546 files in other folders)
