[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rememberstack"
version = "0.1.0"
description = "Open memory infrastructure for AI agents."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "WriteIt.ai s.r.o.", email = "info@writeit.ai" },
]
keywords = [
    "ai",
    "agents",
    "memory",
    "knowledge",
    "evidence",
    "bitemporal",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.11",
    "pydantic-settings>=2.10",
]

[project.optional-dependencies]
server = [
    "alembic>=1.16",
    "boto3>=1.42",
    "fastapi>=0.139.2",
    "ladybug>=0.18.2",
    "lancedb>=0.34.0",
    "markdown-it-py>=4.2.0",
    "markitdown>=0.1.6",
    "onnxruntime>=1.24.1; python_version >= '3.14'",
    "psycopg[binary]>=3.2",
    "sqlalchemy>=2.0",
    "uvicorn>=0.37",
]
# The watched-directory connector uses only the standard library. Other
# connector extras are added with their adapters, rather than speculatively.
connectors-watched-directory = []
# K ships as repository-native data in Phase 6; this names its install surface.
k = []

[project.scripts]
remember = "rememberstack.surfaces.cli:main"

[project.urls]
Homepage = "https://remember.dev"
Documentation = "https://remember.dev/docs"
Repository = "https://github.com/writeitai/remember-stack"
Issues = "https://github.com/writeitai/remember-stack/issues"

[dependency-groups]
dev = [
    "alembic>=1.16",
    "boto3>=1.42",
    "fastapi>=0.139.2",
    "import-linter>=2.13",
    "ladybug>=0.18.2",
    "lancedb>=0.34.0",
    "markdown-it-py>=4.2.0",
    "markitdown>=0.1.6",
    "onnxruntime>=1.24.1; python_version >= '3.14'",
    "psycopg[binary]>=3.2",
    "pyright>=1.1",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "ruff>=0.4",
    "sqlalchemy>=2.0",
    "uvicorn>=0.37",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rememberstack"]

# Ruff config copied from the writeitai house style (team-harness / loopy-loop).
[tool.ruff]
src = ["src"]
target-version = "py312"
line-length = 88

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
extend-select = ["I", "B", "A", "ERA", "TID251"]

# All configuration goes through pydantic-settings; secrets are SecretStr/SecretBytes
# (requirements_v3.md §Code). Env vars are read in exactly one place — a BaseSettings
# class — never ad hoc. Tests set env via pytest's monkeypatch.setenv, which is not banned.
[tool.ruff.lint.flake8-tidy-imports.banned-api]
"os.environ".msg = "Read config via pydantic-settings (BaseSettings), not os.environ (requirements §Code)."
"os.getenv".msg = "Read config via pydantic-settings (BaseSettings), not os.getenv (requirements §Code)."
"os.putenv".msg = "Do not mutate the process environment; pass typed settings instead (requirements §Code)."

[tool.ruff.lint.isort]
case-sensitive = false
force-single-line = true
force-sort-within-sections = true
known-first-party = ["rememberstack"]
order-by-type = false
relative-imports-order = "closest-to-furthest"
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

# Deliberate deviation from the team-harness/loopy-loop template: they run pyright in
# "basic" mode with ~20 report* checks disabled. This is a data-integrity system (enums,
# validity windows, adjudication outcomes), so library code runs "standard" (NOT strict —
# the noisy reportUnknown* family is off) with no checks disabled.
#
# Relax-with-receipts rule: any future report*=false here MUST carry a one-line reason
# comment and come from observed friction on real code, never pre-emptively. Loosening
# later is a one-line change; tightening later means fixing accumulated violations.
[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["src"]
extraPaths = ["src"]
exclude = ["**/.venv", "**/virtualenvs", "tmp/"]

# Test code has different ergonomics (poking internals, monkeypatching) — relaxed
# per-directory, so src/rememberstack stays at full standard.
[[tool.pyright.executionEnvironments]]
root = "src/tests"
reportPrivateUsage = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]
testpaths = ["src/tests"]

[tool.coverage.run]
source = ["src/rememberstack"]
branch = true
relative_files = true # required by the coverage-comment action

[tool.coverage.report]
show_missing = true
precision = 1
